--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,12 +1,42 @@
+<!--
+  ~ Copyright 2010 Jon S Akhtar (Sylvanaar)
+  ~
+  ~   Licensed under the Apache License, Version 2.0 (the "License");
+  ~   you may not use this file except in compliance with the License.
+  ~   You may obtain a copy of the License at
+  ~
+  ~   http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~   Unless required by applicable law or agreed to in writing, software
+  ~   distributed under the License is distributed on an "AS IS" BASIS,
+  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~   See the License for the specific language governing permissions and
+  ~   limitations under the License.
+  -->
+
 <idea-plugin version="2">
-  <name>Plugin name here</name>
-  <description>short description of the plugin</description>
-  <version>1.0</version>
-  <vendor>YourCompany</vendor>
+  <name>Lua</name>
+  <description>Lua language integration</description>
+  <version>0.0</version>
+  <vendor/>
   <idea-version since-build="8000"/>
 
   <application-components>
     <!-- Add your application components here -->
+      <component>
+          <implementation-class>com.sylvanaar.idea.Lua.LuaSupportLoader</implementation-class>
+      </component>
+      <component>
+          <implementation-class>com.sylvanaar.idea.Lua.platform.PlatformDependentToolsInstaller</implementation-class>
+      </component>
+      <component>
+          <implementation-class>com.sylvanaar.idea.Lua.configurator.LuaServersConfiguration</implementation-class>
+          <interface-class>com.sylvanaar.idea.Lua.configurator.LuaServersConfiguration</interface-class>
+      </component>
+      <component>
+          <implementation-class>com.sylvanaar.idea.Lua.configurator.LuaConfigurationManager</implementation-class>
+          <interface-class>com.sylvanaar.idea.Lua.configurator.LuaConfigurationManager</interface-class>
+      </component>
   </application-components>
 
   <project-components>
