reworked a bunch for 0.1.4

--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -15,9 +15,25 @@
 #   limitations under the License.
 #
 
-parser.eof=Unexpected end of file
-parser.expected={0} expected
-parser.orexpected={0} or {1} expected
-parser.unexpected=Unexpected {0}
+# color settings
+color.settings.name=Lua
+color.settings.keyword=Keywords
+color.settings.comment=Comments
+color.settings.number=Numbers
+color.settings.string=Strings
+
+color.settings.operation=Operators
+color.settings.brackets=Brackets
+color.settings.bad_character=Unknown character
+color.settings.comma=Comma
+
+
+color.settings.identifier=Identifier
+color.settings.longstring.braces=Extended String Braces
+color.settings.longstring=Extended String
+color.settings.longcomment.braces=Extended Comment Braces
+color.settings.longcomment=Extended Comment
+color.settings.parenths=Parenthesis
+color.settings.braces=Curly Braces
 
 
