--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -16,8 +16,14 @@
 
 <idea-plugin version="2">
   <name>Lua</name>
-  <description>Lua language integration</description>
-  <version>0.1.3</version>
+  <description><![CDATA[
+		Lua language integratation.
+		Provides:
+		1) Syntax hilighting - including proper handling of extended syntax comments and quotes.
+		2) Brace Matching for do blocks, long strings and comments, and (, { , [
+		3) Minor feature: comment in/out.
+	]]></description>
+  <version>0.1.4</version>
   <vendor>sylvanaar</vendor>
   <idea-version since-build="8000"/>
 
@@ -38,18 +44,15 @@
 
   <extensions defaultExtensionNs="com.intellij">
       
-    <syntaxHighlighter key="Lua" implementationClass="com.sylvanaar.idea.Lua.lexer.LuaSyntaxHighlighter"/>
+    <syntaxHighlighter key="Lua" implementationClass="com.sylvanaar.idea.Lua.hilighter.LuaSyntaxHighlighter"/>
 
     <lang.braceMatcher language="Lua"
                          implementationClass="com.sylvanaar.idea.Lua.LuaBraceMatcher"/>
 
-    <lang.parserDefinition language="Lua" implementationClass="com.sylvanaar.idea.Lua.parser.LuaParserDefinition"/>
-    <lang.commenter language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCommenter"/>
-    <lang.foldingBuilder language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaFoldingBuilder"/>
-    <lang.formatter language="Lua" implementationClass="com.sylvanaar.idea.Lua.formatter.LuaFormattingModelBuilder"/>
 
-    <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.findUsages.LuaFindUsagesProvider"/>
-  
+    <colorSettingsPage implementation="com.sylvanaar.idea.Lua.hilighter.LuaColorsPage"/>
+    <lang.commenter language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCommenter"/>
+    
 
   </extensions>
 </idea-plugin>
