--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -15,54 +15,68 @@
   -->
 
 <idea-plugin version="2">
-  <name>Lua</name>
-  <description><![CDATA[
-<html>
-<head>
-    <title>Lua language integratation.</title>
-</head>
-<body>
-<h1>0.1.5</h1>
-<ul>
-<li>Syntax hilighting - including proper handling of extended syntax comments and quotes, and custom colors</li>
-<li>Brace Matching for do blocks, long strings and comments, and (, { , [</li>
-<li>Minor feature: comment in/out.</li>
+    <name>Lua</name>
+    <description><![CDATA[
+        <html>
+        <head>
+            <title>Lua language integration.</title>
+        </head>
+        <body>
+        <h3>Lua language integration</h3>
 
-</ul>
-</body>
-</html>
-	]]></description>
-  <version>0.1.6</version>   
-  <vendor email="sylvanaar@mindspring.com">sylvanaar</vendor>
-  <idea-version since-build="8000"/>
+        <p>Features:</p>
+        <ol>
+            <li>Syntax highlighting - including proper handling of extended syntax comments and quotes</li>
+            <li>Customizable highlighting colors</li>
+            <li>Brace Matching for do blocks, long strings and comments, and (, { , [</li>
+            <li>Minor feature: comment in/out.</li>
+        </ol>
+        </body>
+        </html>
+        ]]></description>
+    <change-notes><![CDATA[
+        <html>
+        <body>
+        <dl>
+            <dt>0.1.6</dt>
+            <dd>Fix to ignore newline after extended string start token</dd>
+            <dt>0.1.5</dt>
+            <dd>Customizable coloring</dd>
+        </dl>
+        </body>
+        </html>
+        ]]></change-notes>
+    <version>0.1.6</version>
+    <vendor email="sylvanaar@mindspring.com">sylvanaar</vendor>
+    <idea-version since-build="8000"/>
 
-  <application-components>
-    <!-- Add your application components here -->
-      <component>
-          <implementation-class>com.sylvanaar.idea.Lua.LuaSupportLoader</implementation-class>
-      </component>
-  </application-components>
+    <application-components>
+        <!-- Add your application components here -->
+        <component>
+            <implementation-class>com.sylvanaar.idea.Lua.LuaSupportLoader</implementation-class>
+        </component>
+    </application-components>
 
-  <project-components>
-    <!-- Add your project components here -->
-  </project-components>
+    <project-components>
+        <!-- Add your project components here -->
+    </project-components>
 
-  <actions>
-    <!-- Add your actions here -->
-  </actions>
+    <actions>
+        <!-- Add your actions here -->
+    </actions>
 
-  <extensions defaultExtensionNs="com.intellij">
-      
-    <syntaxHighlighter key="Lua" implementationClass="com.sylvanaar.idea.Lua.hilighter.LuaSyntaxHighlighter"/>
+    <extensions defaultExtensionNs="com.intellij">
 
-    <lang.braceMatcher language="Lua"
-                         implementationClass="com.sylvanaar.idea.Lua.LuaBraceMatcher"/>
+        <syntaxHighlighter key="Lua" implementationClass="com.sylvanaar.idea.Lua.hilighter.LuaSyntaxHighlighter"/>
+
+        <lang.braceMatcher language="Lua"
+                           implementationClass="com.sylvanaar.idea.Lua.LuaBraceMatcher"/>
 
 
-    <lang.parserDefinition language="Lua" implementationClass="com.sylvanaar.idea.Lua.parser.LuaParserDefinition"  />
-    <colorSettingsPage implementation="com.sylvanaar.idea.Lua.hilighter.LuaColorsPage"/>
-    <lang.commenter language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCommenter"/>
-    
+        <lang.parserDefinition language="Lua" implementationClass="com.sylvanaar.idea.Lua.parser.LuaParserDefinition"/>
+        <colorSettingsPage implementation="com.sylvanaar.idea.Lua.hilighter.LuaColorsPage"/>
+        <lang.commenter language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCommenter"/>
 
-  </extensions>
+
+    </extensions>
 </idea-plugin>
