--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -36,5 +36,8 @@ color.settings.longcomment=Extended Comment
 color.settings.parenths=Parenthesis
 color.settings.braces=Curly Braces
 color.settings.constant.keywords=Value Keywords
+parsing.message.expected=expected token
+parsing.message.unexpected=found unexpected token
+parsing.error.expr.expr_expected=expression expected
 
 
