--- a/src/LuaBundle.properties
+++ b/src/LuaBundle.properties
@@ -39,5 +39,14 @@ color.settings.constant.keywords=Value Keywords
 parsing.message.expected=expected token
 parsing.message.unexpected=found unexpected token
 parsing.error.expr.expr_expected=expression expected
+run.configuration.title=Execute Lua Script
+run.configuration.type.description=Execute the script using the Lua interpreter
+run.configuration.classpath.from.module.choose=Create Property
+show.smth=show smth
+vm.parameters=vm parms
+program.parameters=program parms
+new.menu.action.text=menu action
+new.menu.action.description=menu desc
+plugin.descriptor=Lua
 
 
