fixed the bug where you could start and end a long comment during a short comment to end it before the end of the line --  --[[ ]]. Support for running luac in the background to syntax check and then annotate your code where any syntax error may exist. Support (experimental) for the structure view

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -39,6 +39,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.3.0</dt>
+            <dd>Using luac to syntax check the current file.</dd>
             <dt>0.2.1</dt>
             <dd>Improved parser offering better code folding for functions</dd>
             <dt>0.2.0</dt>
