--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -44,6 +44,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.6.1</dt>
+            <dd>Bug fixes, and disabling of some unimplemented features</dd>
             <dt>0.6</dt>
             <dd>Now using Kahlua as the built in interpreter tool, and the compiler</dd>    
             <dt>0.5.1</dt>
@@ -116,7 +118,7 @@
     <!--</extensionPoints>-->
 
     <extensions defaultExtensionNs="com.intellij">
-        <toolWindow id="KahLua" anchor="right" icon="/general/toolWindowCommander.png"
+        <toolWindow id="Kahlua" anchor="right" icon="/general/toolWindowCommander.png"
                     factoryClass="com.sylvanaar.idea.Lua.KahLuaInterpreterWindowFactory"/>
 
         <projectConfigurable implementation="com.sylvanaar.idea.Lua.settings.LuaProjectSettingsConfigurable" />
@@ -152,12 +154,12 @@
 
         <fileTypeIndentOptionsProvider id="Lua" implementation="com.sylvanaar.idea.Lua.formatter.LuaIndentOptionsProvider"/>
 
-        <completion.contributor language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCompletionContributer" />
+        <!--<completion.contributor language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaCompletionContributer" />-->
 
         <lang.psiStructureViewFactory language="Lua"
                                       implementationClass="com.sylvanaar.idea.Lua.structure.LuaStructureViewFactory"/>
 
-        <lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaFindUsagesProvider" />
+        <!--<lang.findUsagesProvider language="Lua" implementationClass="com.sylvanaar.idea.Lua.LuaFindUsagesProvider" />-->
 
     </extensions>
 </idea-plugin>
