--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -44,6 +44,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.6.3</dt>
+            <dd>Improve annotation when using Kahlua - now it annotates semi-instantly</dd>
             <dt>0.6.2</dt>
             <dd>Fix unresponsive annotator for syntax errors</dd>
             <dt>0.6.1</dt>
@@ -79,7 +81,7 @@
         </body>
         </html>
         ]]></change-notes>
-    <version>0.6.2</version>
+    <version>0.6.3</version>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
     <category>Custom Languages</category>
     <idea-version since-build="8000"/>
