update plugin.xml for 0.6.5

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -44,6 +44,8 @@
         <html>
         <body>
         <dl>
+            <dt>0.6.5</dt>
+            <dd>display key commands for Kahlua shell</dd>
             <dt>0.6.3 - 0.6.4</dt>
             <dd>Improve annotation when using Kahlua - now it annotates semi-instantly</dd>
             <dt>0.6.2</dt>
@@ -81,7 +83,7 @@
         </body>
         </html>
         ]]></change-notes>
-    <version>0.6.4</version>
+    <version>0.6.5</version>
     <vendor url="https://www.ohloh.net/accounts/sylvanaar" email="sylvanaar@mindspring.com">sylvanaar</vendor>
     <category>Custom Languages</category>
     <idea-version since-build="8000"/>
