checkpoint update - parser sorta working on simple cases. can detect globals vs locals with almost total accuracy. Don't expect this version to work - its still in major development

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -146,8 +146,8 @@
         <lang.braceMatcher language="Lua"
                            implementationClass="com.sylvanaar.idea.Lua.LuaBraceMatcher"/>
 
-        <externalAnnotator language="Lua"
-                           implementationClass="com.sylvanaar.idea.Lua.annotator.LuaExternalDelegatingAnnotator"/>
+<!--        <externalAnnotator language="Lua"
+                           implementationClass="com.sylvanaar.idea.Lua.annotator.LuaExternalDelegatingAnnotator"/>-->
         <lang.parserDefinition language="Lua" implementationClass="com.sylvanaar.idea.Lua.parser.LuaParserDefinition"/>
 
         <colorSettingsPage implementation="com.sylvanaar.idea.Lua.hilighter.LuaColorsPage"/>
